--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,9 @@ line-height: 28px;
     .gallery__slider {
         max-width: 90%;
     }
+    #myModal {
+        width: 480px;
+    }
 }
 @media (max-width: 630px){
     .header__title {
@@ -400,6 +403,13 @@ line-height: 28px;
         font-size: 15px;
         line-height: 24px;
 
+    }
+    #myModal {
+        width: 70%;
+    }
+    .overlay-form
+    .header__btn {
+        width: 100%;
     }
 }
 @media (max-width: 380px){
@@ -431,5 +441,12 @@ line-height: 28px;
     }
     .masters__info-details {
         font-size: 15px;
+    }
+    #myModal {
+        width: 80%;
+    }
+    .overlay-form
+    .header__btn {
+        width: 100%;
     }
 }
